--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,6 @@
 @import "./css/reset.css";
 @import "./css/vars.css";
 
-body {
-  margin: 10px;
-}
-
 .progressBarHolder {
   position: relative;
   display: flex;
@@ -24,4 +20,53 @@ body {
 }
 .contentHolder {
   display: flex;
+}
+
+.timeLine {
+  display: flex;
+  width: 100%;
+  height: 100px;
+}
+
+.deel1,
+.deel2 {
+  height: 100%;
+  width: 30px;
+  background-color: black;
+  margin: 0 10px;
+}
+.uploadBar {
+  position: relative;
+  flex-grow: 2;
+  overflow: hidden;
+
+  & input {
+    font-size: 100vw;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+  }
+
+  & label {
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    display: block;
+  }
+}
+
+.clipsHolder {
+  display: flex;
+}
+
+.clip {
+  height: 100%;
+  max-width: 100px;
+
+  & video,
+  & img {
+    max-height: 100%;
+    max-width: 100%;
+  }
 }
