--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,8 @@
 }
 .uploadBar {
   position: relative;
-  flex-grow: 2;
+  flex: 2;
+  min-width: 30%;
   overflow: hidden;
 
   & input {
@@ -63,12 +64,29 @@
   height: 200px;
 }
 .clip {
+  position: relative;
+  flex: 2;
   height: 100%;
-  max-width: 100px;
+  background-color: blue;
+  overflow: hidden;
 
   & video,
   & img {
     max-height: 100%;
-    max-width: 100%;
   }
+
+  & p {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+.uploadBarWithClip {
+  flex: 0;
+}
+
+.clipHolderWithClips {
+  flex: 2;
 }
