--- a/src/style.css
+++ b/src/style.css
@@ -89,3 +89,20 @@
 .clipHolderWithClips {
   flex: 2;
 }
+
+.moveClipBtn {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  height: 100%;
+  width: 10px;
+  background-color: orange;
+}
+
+.moveClipBtnPrev {
+  left: 0;
+}
+
+.moveClipBtnNext {
+  right: 0;
+}
