--- a/src/style.css
+++ b/src/style.css
@@ -147,6 +147,35 @@
   background-color: red;
 }
 
+.trimmerWindow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.videoTrimmer {
+  display: inline-block;
+}
+
+.trimmerTimeLine {
+  width: 100%;
+  height: 50px;
+  background-color: blue;
+}
+
+.videoLength {
+  position: relative;
+  height: 100%;
+  background-color: black;
+}
+
 .hide {
   display: none;
 }
