--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,15 @@
-@import "./css/reset.css";
-@import "./css/vars.css";
+@import './css/reset.css';
+@import './css/vars.css';
 
 .progressBarHolder {
   position: relative;
   display: flex;
 }
+
 .stepsHolder {
   display: flex;
 }
+
 .step {
   margin-left: 5px;
   width: 10px;
@@ -18,6 +20,7 @@
 .activeStep {
   background-color: red;
 }
+
 .contentHolder {
   display: flex;
   position: relative;
@@ -41,6 +44,7 @@
   background-color: black;
   margin: 0 10px;
 }
+
 .uploadBar {
   position: relative;
   flex: 2;
@@ -66,9 +70,11 @@
 .clipsHolder {
   display: flex;
 }
+
 .test {
   height: 200px;
 }
+
 .clip {
   display: flex;
   position: relative;
@@ -158,7 +164,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, .5);
 }
 
 .videoTrimmer {
