--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
-@import './css/reset.css';
-@import './css/vars.css';
+@import "./css/reset.css";
+@import "./css/vars.css";
 
 .progressBarHolder {
   position: relative;
@@ -164,7 +164,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .videoTrimmer {
@@ -184,9 +184,25 @@
 }
 
 .bodyPart {
+  display: block;
   width: 100px;
   height: 100px;
   background-color: red;
+
+  & .selectedBox {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+  }
+
+  & input {
+    display: none;
+  }
+
+  & input:checked ~ .selectedBox {
+    background-color: red;
+  }
 }
 
 .activeBodyPart {
@@ -197,6 +213,7 @@
   display: none;
 }
 
-.btn, .btn-success {
+.btn,
+.btn-success {
   margin-left: 2.5rem;
 }
