register last added step maker

--- a/src/style.css
+++ b/src/style.css
@@ -197,10 +197,34 @@ body {
   background-color: blue;
 }
 
-.hide {
-  display: none;
-}
-
 .btn, .btn-success {
   margin-left: 2.5rem;
+}
+
+.profilePictureDiv {
+  width: 4rem;
+  height: 4rem;
+  overflow: hidden;
+  position: relative;
+
+  & img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  & input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    font-size: 100vw;
+    opacity: 0;
+  }
+}
+
+.hide {
+  display: none;
 }
