--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,107 @@
 @import "./css/reset.css";
 @import "./css/vars.css";
 
+body {
+  padding: 1rem 1rem 0;
+  height: 100vh;
+  overflow: auto;
+}
+
+#root {
+  background-color: var(--backgroundColor);
+  min-height: 100%;
+}
+
+h1 {
+  display: none;
+}
+
+nav {
+  & ul {
+    display: flex;
+  }
+
+  & ul li {
+    flex: 2;
+    text-align: center;
+    font-size: 1.6rem;
+  }
+
+  & ul li a {
+    text-decoration: none;
+    color: var(--defaultFontColor);
+  }
+}
+
+.activeLink a {
+  color: var(--activeColor);
+}
+
+.videoPlayerInfo {
+  & .infoVideoHolder video {
+    width: 100%;
+  }
+}
+
+.cardHolder {
+  padding: 0 1rem;
+}
+
+.card {
+  display: block;
+  font-size: 1.4rem;
+  text-decoration: none;
+  color: var(--defaultFontColor);
+  border-radius: 0.5rem;
+  background-color: var(--cardColor);
+
+  & header {
+    border-radius: 0.5rem;
+    overflow: hidden;
+  }
+
+  & header video {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  & img {
+    border-radius: 50%;
+    display: block;
+    width: 4rem;
+    height: 4rem;
+    overflow: hidden;
+  }
+
+  & .cardTitle {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+
+    & h3 {
+      font-size: 2rem;
+      order: 1;
+      flex: 2;
+      margin-left: 0.5rem;
+    }
+  }
+
+  & .contributorsData {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+
+    & .contributors {
+      display: flex;
+      flex: 2;
+    }
+
+    & p {
+      margin-left: 0.5rem;
+    }
+  }
+}
+
 .progressBarHolder {
   position: relative;
   display: flex;
