--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -7,6 +7,7 @@
   --weight-regular: 400;
   --weight-bold: 700;
   --defaultFontColor: black;
+  --borderRadius: 0.5rem;
 }
 
 @custom-media --xs screen and (min-width: 0);
