--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,8 @@ h1 {
 button {
   border: none;
   background: none;
+  outline: none;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 nav {
