--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,6 @@
 body {
   font-family: Montserrat, sans-serif;
   padding: 1rem;
-  min-height: 100vh;
-}
-
-.progressBarHolder {
-  padding: 1rem 1rem 0;
   height: 100vh;
   overflow: auto;
 }
@@ -48,6 +43,10 @@ nav {
 
 .activeLink a {
   color: var(--activeColor);
+}
+
+main {
+  padding: 1rem;
 }
 
 progress {
@@ -101,32 +100,30 @@ progress::-moz-progress-bar {
   }
 }
 
-.videoPlayerInfo {
-  margin: 0 1rem;
-
-  & .infoVideoHolder video {
-    width: 100%;
-  }
-}
-
-.cardHolder {
-  padding: 0 1rem;
+.infoVideoHolder video {
+  width: 100%;
 }
 
 .card {
-  display: block;
-  font-size: 1.4rem;
   text-decoration: none;
+}
+
+.card article {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.4rem;
+
   color: var(--defaultFontColor);
   border-radius: var(--borderRadius);
   background-color: var(--cardColor);
 
-  & header {
+  & .cardVideoHolder {
     border-radius: var(--borderRadius);
     overflow: hidden;
+    order: -1;
   }
 
-  & header video {
+  & .cardVideoHolder video {
     max-width: 100%;
     max-height: 100%;
   }
@@ -139,7 +136,7 @@ progress::-moz-progress-bar {
     overflow: hidden;
   }
 
-  & .cardTitle {
+  & header {
     display: flex;
     align-items: center;
     padding: 0.5rem;
