--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -1,13 +1,18 @@
 :root {
   --color-black: black;
   --cardColor: white;
+  --color-white: white;
+  --color-purple: #6a32ef;
   --backgroundColor: #dad8df;
   --color-orange: #fd7166;
   --activeColor: #6a32ef;
   --weight-regular: 400;
   --weight-bold: 700;
+  --weight-semibold: 600;
   --defaultFontColor: black;
   --borderRadius: .5rem;
+  --titlesize: 2.5rem;
+  --broodtekst: 1.6rem;
 }
 
 @custom-media --xs screen and (min-width: 0);
