--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -6,6 +6,7 @@
   --secondColorBg: #fd7166;
   --secondColorBgTextColor: white;
   --activeColor: #6a32ef;
+  --activeTextColor: #fff;
   --weight-regular: 400;
   --weight-bold: 700;
   --weight-semibold: 600;
