--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,38 @@
 @import "./css/vars.css";
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: Montserrat, sans-serif;
   padding: 1rem;
   min-height: 100vh;
 }
 
 #root {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
   background-color: var(--backgroundColor);
   min-height: calc(100vh - 2rem);
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+}
+
+.headerAndMainHolder {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+  min-height: calc(100vh - 2rem);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
 }
 
 h1 {
@@ -36,7 +60,7 @@ button {
 }
 
 input {
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   border-radius: var(--borderRadius);
   font-family: Montserrat, sans-serif;
   border: none;
@@ -47,6 +71,17 @@ input {
   &:focus {
     outline: none;
   }
+}
+
+label {
+  display: block;
+}
+
+label span {
+  display: block;
+  font-size: 2rem;
+  color: var(--secondColorBgTextColor);
+  margin-bottom: 0.5rem;
 }
 
 nav {
@@ -122,7 +157,29 @@ footer {
 }
 
 .lastSection {
-  margin-bottom: 2rem;
+  padding-bottom: 2rem;
+}
+
+.colorBg {
+  position: relative;
+  flex: 2;
+  background-color: var(--secondColorBg);
+  padding: 0 1rem;
+  margin-top: 2rem;
+}
+
+.colorBgTop::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -2rem;
+  left: 0;
+  width: 100%;
+  height: 2rem;
+  background-image: url(./assets/img/tileableWave.svg);
+  background-size: auto 100%;
+  background-repeat: repeat-x;
+  background-position: center bottom;
 }
 
 .btn,
@@ -361,10 +418,8 @@ progress::-moz-progress-bar {
 }
 
 /* HOME */
-.filterAndHeader {
-  & header {
-    margin-bottom: 2rem;
-  }
+.filterAndHeader header {
+  margin-bottom: 2rem;
 }
 
 .zoekFilterHolder {
@@ -628,7 +683,62 @@ progress::-moz-progress-bar {
   }
 }
 
-/* LOGIN */
+/* LOGIN/register */
+
+.loginHolder {
+  display: flex;
+  flex-direction: column;
+  flex: 2;
+
+  & header h2 {
+    margin-bottom: 3rem;
+  }
+
+  & label {
+    margin-bottom: 2rem;
+  }
+
+  & .colorBg {
+    display: flex;
+    flex-direction: column;
+  }
+
+  & article:first-of-type {
+    flex: 2;
+  }
+
+  & .registerHolder {
+    text-align: center;
+    margin-bottom: 4rem;
+
+    & header h3 {
+      font-weight: var(--weight-semibold);
+      font-size: var(--titlesize);
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+.ww-vergeten {
+  position: relative;
+  display: inline-block;
+  text-transform: uppercase;
+  color: var(--activeColor);
+  font-size: var(--broodtekst);
+  font-weight: var(--weight-semibold);
+  text-decoration: none;
+  margin-bottom: 2rem;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -0.3rem;
+    display: block;
+    width: 100%;
+    height: 0.3rem;
+    background-color: var(--activeColor);
+  }
+}
 
 .titleCSS {
   color: var(--color-black);
@@ -636,79 +746,6 @@ progress::-moz-progress-bar {
   align-self: center;
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
-
-.login-div {
-  padding: 0 1rem;
-}
-
-.login-form {
-}
-
-.login-field {
-  display: flex;
-  flex-direction: column;
-  margin-top: 3rem;
-}
-
-.form-label {
-  align-self: flex-start;
-  color: var(--color-white);
-  font-size: var(--titlesize);
-  font-weight: var(--weight-bold);
-}
-
-.form-input {
-  width: 100%;
-  height: 4.5rem;
-  background: transparent;
-  background-color: var(--color-white);
-  border: none;
-  border-radius: var(--borderRadius);
-  font-family: Montserrat, sans-serif;
-  font-size: 2.2rem;
-  color: var(--backgroundColor);
-  margin-top: 1rem;
-}
-
-.ww-vergeten {
-  text-transform: uppercase;
-  color: var(--color-purple);
-  font-size: var(--broodtekst);
-  font-weight: var(--weight-semibold);
-  text-decoration: none;
-}
-
-.vraag {
-  font-weight: var(--weight-semibold);
-  font-size: 2rem;
-  align-self: center;
-}
-
-.orange-background {
-  background-color: var(--secondColorBg);
-  padding: 1rem;
-}
-
-.register-btn {
-  height: 4.5rem;
-  text-transform: uppercase;
-  font-weight: var(--weight-bold);
-  font-size: var(--titlesize);
-  background-color: transparent;
-  border: 0.3rem solid var(--color-purple);
-  border-radius: var(--borderRadius);
-}
-
-.register-link {
-  color: var(--color-purple);
-  text-decoration: none;
-}
-
-.redirect-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .hide {
