--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,8 @@ button {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
-input {
+input,
+textarea {
   padding: 1rem;
   border-radius: var(--borderRadius);
   font-family: Montserrat, sans-serif;
@@ -71,6 +72,10 @@ input {
   &:focus {
     outline: none;
   }
+}
+
+textarea {
+  resize: none;
 }
 
 label {
@@ -711,22 +716,68 @@ progress::-moz-progress-bar {
   order: -1;
 }
 
-/* JUNK */
+/* videoEditor */
+
+.videoEditor header {
+  margin-bottom: 4rem;
+}
+
+.videoEditorHolder {
+  padding: 4rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto 1fr;
+  grid-gap: 2rem;
+
+  & .videoPlayer {
+    grid-column: 1 / 2;
+    grid-row: 2 / -1;
+    background-color: black;
+  }
+
+  & form {
+    grid-column: -2 / -1;
+    grid-row: 2 / -1;
+  }
+
+  & .timeLine {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+  }
+}
+
+.createProjectForm {
+  display: flex;
+  margin-bottom: 2rem;
+
+  & .bodyPartSelector {
+    margin-right: 2rem;
+  }
+}
+
+.titleAndStoryHolder {
+  flex: 2;
+
+  & label:last-of-type {
+    margin-top: 2rem;
+  }
+
+  & textarea {
+    height: 20rem;
+  }
+}
+
 .timeLine {
   display: flex;
   width: 100%;
-  height: 100px;
+  height: 10rem;
 }
 
 .track {
   display: flex;
   height: 100%;
   width: 100%;
-}
-
-.outroTrack {
-  max-width: 20%;
-  background-color: yellow;
+  border-radius: var(--borderRadius);
 }
 
 .uploadBar {
@@ -734,6 +785,7 @@ progress::-moz-progress-bar {
   flex: 2;
   min-width: 30%;
   overflow: hidden;
+  border-radius: var(--borderRadius);
 
   & input {
     font-size: 100vw;
@@ -746,10 +798,18 @@ progress::-moz-progress-bar {
   & label {
     width: 100%;
     height: 100%;
-    background-color: red;
+    background-color: var(--backgroundColor);
     display: block;
   }
 }
+
+.outroTrack {
+  margin-left: 2rem;
+  max-width: 20%;
+  background-color: yellow;
+}
+
+/* JUNK */
 
 .clipsHolder {
   display: flex;
