more of the upload done

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -7,11 +7,13 @@
   --secondColorBgTextColor: white;
   --activeColor: #6a32ef;
   --activeTextColor: #fff;
+  --videoPlayerColor: yellow;
   --weight-regular: 400;
   --weight-bold: 700;
   --weight-semibold: 600;
   --defaultFontColor: black;
   --borderRadius: 0.5rem;
+  --border: 0.3rem;
   --titlesize: 2.5rem;
   --broodtekst: 1.6rem;
 }
