--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,7 @@ button {
   background: none;
   outline: none;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  cursor: pointer;
 }
 
 input,
@@ -725,24 +726,43 @@ progress::-moz-progress-bar {
 
 .videoEditor header {
   margin-bottom: 4rem;
+
+  & h2 {
+    font-size: 4rem;
+  }
 }
 
 .videoEditorHolder {
   padding: 4rem;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 40rem;
   grid-template-rows: auto 1fr;
   grid-gap: 2rem;
 
-  & .videoPlayer {
+  & .videoPlayerHolder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     grid-column: 1 / 2;
     grid-row: 2 / -1;
-    background-color: black;
+  }
+
+  & .videoPlayer {
+    border-radius: var(--borderRadius);
+    max-width: 60rem;
+  }
+
+  & .videoPlayer .videoControls {
+    z-index: 10;
   }
 
   & form {
     grid-column: -2 / -1;
     grid-row: 2 / -1;
+  }
+
+  & form button {
+    margin-top: 1rem;
   }
 
   & .timeLine {
@@ -753,7 +773,6 @@ progress::-moz-progress-bar {
 
 .createProjectForm {
   display: flex;
-  margin-bottom: 2rem;
 
   & .bodyPartSelector {
     margin-right: 2rem;
@@ -780,9 +799,11 @@ progress::-moz-progress-bar {
 
 .track {
   display: flex;
+  padding: 1rem;
   height: 100%;
   width: 100%;
   border-radius: var(--borderRadius);
+  background-color: var(--backgroundColor);
 }
 
 .uploadBar {
@@ -791,6 +812,7 @@ progress::-moz-progress-bar {
   min-width: 30%;
   overflow: hidden;
   border-radius: var(--borderRadius);
+  cursor: pointer;
 
   & input {
     font-size: 100vw;
@@ -798,6 +820,7 @@ progress::-moz-progress-bar {
     left: 0;
     top: 0;
     opacity: 0;
+    cursor: pointer;
   }
 
   & label {
@@ -811,35 +834,43 @@ progress::-moz-progress-bar {
 .outroTrack {
   margin-left: 2rem;
   max-width: 20%;
+  cursor: pointer;
   background-color: yellow;
 }
 
-/* JUNK */
-
 .clipsHolder {
   display: flex;
-}
-
-.test {
-  height: 200px;
+  cursor: pointer;
 }
 
 .clip {
+  position: relative;
   display: flex;
   position: relative;
   height: 100%;
-  background-color: blue;
+  border-radius: var(--borderRadius);
+  overflow: hidden;
+  margin-right: 1rem;
+  background-color: var(--secondColorBg);
 
   & video,
   & img {
-    max-height: 100%;
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    max-width: 102%;
+    transform: translate(-50%, -50%);
   }
 
   & p {
     position: absolute;
-    bottom: 10px;
+    z-index: 10;
+    bottom: 1rem;
     left: 50%;
     transform: translateX(-50%);
+    color: var(--activeTextColor);
+    text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.5);
   }
 }
 
@@ -851,60 +882,13 @@ progress::-moz-progress-bar {
   flex: 2;
 }
 
-.moveClipBtn {
-  position: absolute;
-  z-index: 10;
-  top: 0;
-  height: 100%;
-  width: 10px;
-  background-color: orange;
-}
-
-.moveClipBtnPrev {
-  left: 0;
-}
-
-.moveClipBtnNext {
-  right: 0;
-}
-
 .activeClip {
-  border: solid 5px purple;
-}
-
-.selectedClip {
-  border: solid 5px green;
-}
-
-.trimer {
-  position: absolute;
-  display: block;
-  z-index: 5;
-  top: -20px;
-  width: 20px;
-  height: 20px;
-  background-color: purple;
-}
-
-.trimerStart {
-  left: -10px;
-}
-
-.trimerEnd {
-  right: -10px;
-}
-
-.scrubber {
-  position: absolute;
-  top: -20px;
-  left: -10px;
-  height: 20px;
-  width: 20px;
-  background-color: red;
+  border: solid var(--border) var(--activeColor);
 }
 
 .trimmerWindow {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -913,23 +897,146 @@ progress::-moz-progress-bar {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.8);
+
+  & header {
+    font-size: 4rem;
+    margin-bottom: 2rem;
+  }
+}
+
+.trimer {
+  position: absolute;
+  display: block;
+  z-index: 5;
+  bottom: -2.2rem;
+  width: 2rem;
+  height: 2rem;
+  background-color: var(--activeColor);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.trimerStart {
+  left: -1rem;
+}
+
+.trimerEnd {
+  right: -1rem;
 }
 
 .videoTrimmer {
+  position: relative;
   display: inline-block;
+
+  & .closeBtn {
+    top: -4rem;
+    right: -4rem;
+    background-color: var(--activeColor);
+  }
+}
+
+.videoTrimmer video {
+  display: block;
+  height: 40vh;
+  border-radius: var(--borderRadius);
+  margin-bottom: 2rem;
+}
+
+.trimmerTimelineAndPlay {
+  display: flex;
+
+  & button {
+    display: block;
+    height: 4rem;
+    width: 4rem;
+    margin-right: 0.2rem;
+    border-radius: 50%;
+    color: transparent;
+    background-color: var(--activeColor);
+  }
 }
 
 .trimmerTimeLine {
   width: 100%;
-  height: 50px;
-  background-color: blue;
+  height: 4rem;
+  background-color: var(--backgroundColor);
+  margin-bottom: 3.2rem;
 }
 
 .videoLength {
   position: relative;
   height: 100%;
-  background-color: black;
+  background-color: var(--videoPlayerColor);
+}
+
+.trimmerBtns {
+  display: flex;
+
+  & button:last-of-type {
+    margin-left: 2rem;
+  }
+}
+
+.moveClipBtn {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  height: 100%;
+  width: 1rem;
+  background-color: var(--activeColor);
+}
+
+.moveClipBtnPrev {
+  left: 0;
+  border-top-left-radius: var(--borderRadius);
+  border-bottom-left-radius: var(--borderRadius);
+}
+
+.moveClipBtnNext {
+  right: 0;
+  border-top-right-radius: var(--borderRadius);
+  border-bottom-right-radius: var(--borderRadius);
+}
+
+.activeClip .moveClipBtn {
+  border-radius: 0;
+}
+
+.uploadLabel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & span {
+    display: flex;
+    align-items: center;
+    color: var(--defaultFontColor);
+    font-size: var(--broodtekst);
+    margin: 0;
+    padding-top: 1.5rem;
+  }
+
+  & span::before {
+    content: "";
+    display: block;
+    height: 5rem;
+    width: 5rem;
+    background-color: var(--activeColor);
+    border-radius: 50%;
+    margin-right: 0.5rem;
+  }
+}
+
+/* JUNK */
+
+.scrubber {
+  position: absolute;
+  top: -20px;
+  left: -10px;
+  height: 20px;
+  width: 20px;
+  background-color: red;
 }
 
 .bodyPart {
