--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,43 @@ label span {
   margin-bottom: 0.5rem;
 }
 
+.labelWithCheckbox {
+  position: relative;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  font-weight: lighter;
+
+  & span {
+    display: block;
+    margin-bottom: 0;
+    font-size: var(--broodtekst);
+  }
+
+  & input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    opacity: 0;
+  }
+
+  & input:checked ~ .customCheckBox {
+    background-color: var(--activeColor);
+  }
+}
+
+.customCheckBox {
+  display: block;
+  background-color: white;
+  min-width: 2.4rem;
+  max-width: 2.4rem;
+  height: 2.4rem;
+  border-radius: 0.2rem;
+  margin: 0;
+  margin-right: 1rem;
+}
+
 nav {
   margin: 0 0 2rem;
 
@@ -1036,7 +1073,8 @@ progress::-moz-progress-bar {
   height: 15rem;
 }
 
-.difficultySelector {
+.difficultySelector,
+.typeHolder {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto 1fr;
@@ -1067,7 +1105,8 @@ progress::-moz-progress-bar {
     font-size: var(--broodtekst);
   }
 
-  & .selectedBox {
+  & .selectedBox,
+  & .selectedType {
     content: "";
     display: block;
     width: 6rem;
@@ -1081,7 +1120,8 @@ progress::-moz-progress-bar {
     display: none;
   }
 
-  & input:checked ~ .selectedBox {
+  & input:checked ~ .selectedBox,
+  & input:checked ~ .selectedType {
     background-color: var(--activeColor);
   }
 }
@@ -1137,30 +1177,6 @@ progress::-moz-progress-bar {
 
 .cssOutroVidShow {
   opacity: 1;
-}
-
-.profilePictureDiv {
-  width: 4rem;
-  height: 4rem;
-  overflow: hidden;
-  position: relative;
-
-  & img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  & input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 5;
-    font-size: 100vw;
-    opacity: 0;
-  }
 }
 
 /* LOGIN/register */
@@ -1226,6 +1242,119 @@ progress::-moz-progress-bar {
   align-self: center;
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+/* Registration */
+legend {
+  text-align: center;
+  color: var(--secondColorBgTextColor);
+  font-size: var(--broodtekst);
+  margin: 4rem 0 4rem;
+}
+
+.typeHolder,
+.formContentHolder {
+  flex: 2;
+}
+
+.formContentHolder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.profilePicHolder {
+  margin: 0 auto;
+  width: 7rem;
+  height: 7rem;
+
+  position: relative;
+  border-radius: 50%;
+
+  &::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 2rem;
+    height: 2rem;
+    background-color: var(--activeColor);
+    border-radius: 50%;
+  }
+
+  & .inputHolder {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  & .imageHolder {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+
+  & .imageHolder img {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  & input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    font-size: 100vw;
+    opacity: 0;
+  }
+}
+
+.prevAndNextHolder {
+  display: flex;
+
+  & button:last-of-type {
+    margin-left: 1rem;
+  }
+}
+
+.stepCounter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+
+  & li {
+    position: relative;
+    border-radius: 50%;
+    margin-left: 1rem;
+    width: 1rem;
+    height: 1rem;
+    background-color: var(--backgroundColor);
+  }
+
+  & li:first-of-type {
+    margin-left: 0;
+  }
+
+  & .activeStep::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -0.1rem;
+    left: -0.1rem;
+    width: 1.2rem;
+    height: 1.2rem;
+    background-color: var(--activeColor);
+    border-radius: 50%;
+  }
 }
 
 .hide {
