maker register done

--- a/src/style.css
+++ b/src/style.css
@@ -94,6 +94,7 @@ label span {
   position: relative;
   display: flex;
   flex-direction: row-reverse;
+  justify-content: flex-end;
   align-items: center;
   font-weight: lighter;
 
@@ -103,7 +104,7 @@ label span {
     font-size: var(--broodtekst);
   }
 
-  & input {
+  & input[type="checkbox"] {
     position: absolute;
     top: 0;
     left: 0;
@@ -111,7 +112,16 @@ label span {
     opacity: 0;
   }
 
-  & input:checked ~ .customCheckBox {
+  & input[type="text"] {
+    order: -1;
+    margin-left: 1rem;
+  }
+
+  & input[type="text"]:disabled {
+    opacity: 0.5;
+  }
+
+  & input[type="checkbox"]:checked ~ .customCheckBox {
     background-color: var(--activeColor);
   }
 }
